sleuth and zipkin integrated in all 3 micro services Rest API call integrated using rest template in user micro service to call API from product and cart micro service

--- a/microservice-poc-product/src/main/resources/application.yml
+++ b/microservice-poc-product/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: Product Microservice
+    name: microservice-poc-product
   data:
     mongodb:
       host: localhost
@@ -13,6 +13,9 @@ spring:
       database: shopping
       repositories:
         eneable: true
+
+  zipkin:
+    base-url: http://localhost:9411/
 
 
 
