--- a/microservice-poc-cart/src/main/resources/application.yml
+++ b/microservice-poc-cart/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: Cart Microservice
+    name: microservice-poc-cart
   data:
     mongodb:
       host: localhost
@@ -13,6 +13,9 @@ spring:
       database: shopping
       repositories:
         eneable: true
+
+  zipkin:
+    base-url: http://localhost:9411/
 
 
 
