--- a/microservice-poc-user/src/main/resources/application.yml
+++ b/microservice-poc-user/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: User Microservice
+    name: microservice-poc-user
   data:
     mongodb:
       host: localhost
@@ -13,6 +13,13 @@ spring:
       database: shopping
       repositories:
         eneable: true
+  zipkin:
+    base-url: http://localhost:9411/
+
+rest:
+  endpoint:
+    cartByUserId: http://localhost:8083/cart/user/{userId}
+    productInfoByProductIdList: http://localhost:8082/product/product-info
 
 
 
