--- a/discovery-server/pom.xml
+++ b/discovery-server/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.3.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>microservice.concept.io.product</groupId>
-	<artifactId>microservice-poc-product</artifactId>
+	<groupId>microservice.concept.io</groupId>
+	<artifactId>discovery-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>microservice-poc-product</name>
-	<description>Product Microservice poc</description>
+	<name>discovery-server</name>
+	<description>Own eureka server project to run on local and deploy on server</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -20,37 +20,10 @@
 	</properties>
 
 	<dependencies>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
-		<!-- Logging Dependency START-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-sleuth</artifactId>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-zipkin</artifactId>
-		</dependency>
-		<!-- Logging Dependency END-->
-
-		<!-- Eureka client dependency START -->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		</dependency>
-		<!-- Eureka client dependency END -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
