--- a/microservice-poc-cart/src/main/resources/application.yml
+++ b/microservice-poc-cart/src/main/resources/application.yml
@@ -17,5 +17,10 @@ spring:
   zipkin:
     base-url: http://localhost:9411/
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:9000/eureka
+
 
 
