--- a/microservice-poc-product/src/main/resources/application.yml
+++ b/microservice-poc-product/src/main/resources/application.yml
@@ -13,9 +13,13 @@ spring:
       database: shopping
       repositories:
         eneable: true
-
   zipkin:
     base-url: http://localhost:9411/
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:9000/eureka
 
 
 
